--- a/zadanie-1-formularz-html5/index.html
+++ b/zadanie-1-formularz-html5/index.html
@@ -36,8 +36,8 @@
         <br>
         <input type="radio" name="gender" value="male"> Mężczyzna
         <br>
-        <label for="wiadomosc">Wiadomość:</label>
-        <textarea name="wiadomosc" cols="30" rows="5" maxlength="150" id="message"></textarea>
+        <label for="message">Wiadomość:</label>
+        <textarea name="message" cols="30" rows="5" maxlength="150" id="message"></textarea>
         <br>
         <input type="checkbox" name="agreement" id="agreement" required>
         <label for="agreement">Wyrażam zgodę na przetwarzanie moich danych osobowych</label>
