--- a/zadanie-1-formularz-html5/index.html
+++ b/zadanie-1-formularz-html5/index.html
@@ -32,9 +32,9 @@
         </select>
         <br>
         <label>Płeć:</label>
-        <input type="radio" name="gender" value="female" checked> Kobieta
+        <input type="radio" name="gender" value="female" id="female" checked><label for="female">Kobieta</label>
         <br>
-        <input type="radio" name="gender" value="male"> Mężczyzna
+        <input type="radio" name="gender" value="male" id="male"><label for="male">Mężczyzna</label>
         <br>
         <label for="message">Wiadomość:</label>
         <textarea name="message" cols="30" rows="5" maxlength="150" id="message"></textarea>
